--- a/steam201711/index.html
+++ b/steam201711/index.html
@@ -35,7 +35,7 @@
               <h2 id="factsheet">Factsheet</h2>
               <p>
                 <strong>Developer:</strong><br/>
-                <a href="../circle/index.html">DiceyCraft</a><br/>
+                <a href="../index.html">DiceyCraft</a><br/>
                 Based in Shimane, Japan
               </p>
               <p>
