--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           </ul>
         </div>
         <div id="content" class="uk-width-medium-3-4">
-          <img src="images/logo.png"><br/>
+          <img src="images/logo.png" id="circle-header">
           <div class="uk-grid">
             <div class="uk-width-medium-2-6">
               <h2 id="factsheet">Factsheet</h2>
               <p>
                 <strong>Developer:</strong><br/>
-                <a href="../circle/index.html">DiceyCraft</a><br/>
+                <a href="./index.html">DiceyCraft</a><br/>
                 Based in Shimane, Japan
               </p>
               <p>
@@ -56,7 +56,7 @@
               </p>
               <p>
                 <strong>Releases:</strong><br />
-                <a href="../steam201711/index.html">Steam</a><br />
+                <a href="steam201711/index.html">Steam</a><br />
               </p>
             </div>
             <div class="uk-width-medium-4-6">
@@ -70,18 +70,20 @@
               </p>
               <h2 id="history">Press Releases</h2>
               <p><strong>2017/11/7:</strong>&nbsp;
-                <a href="../steam201711/index.html">Released "Schatte ～The Witch and the Fake Shadow～" at Steam.</a><br/>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="../steam201711/index.html">Steam にて「魔女と偽りの影」をリリース</a>
+                <a href="steam201711/index.html">Released "Schatte ～The Witch and the Fake Shadow～" at Steam.</a><br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="steam201711/index.html">Steam にて「魔女と偽りの影」をリリース</a>
               </p>
             </div>
           </div>
           <hr>
           <h2 id="logo">Logo &amp; Icon</h2>
           <a href="images/logo.zip">
-            <div class="uk-alert">download logo files as .zip (8.56MB)</div>
+            <div class="uk-alert">download logo files as .zip (369KB)</div>
           </a>
-          <div class="uk-grid images">
-            <div class="uk-width-medium-1-2"><a href="images/logo_en.png"><img src="images/logo_en.png" alt="logo" /></a></div>
+          <div class="uk-grid images" style="background:black;">
+            <div class="uk-width-medium-1-2"><a href="images/DiceyCraft.png"><img src="images/DiceyCraft.png" alt="logo" /></a></div>
+            <div class="uk-width-medium-1-2"><a href="images/DiceyCraftLogo.png"><img src="images/DiceyCraftLogo.png" alt="logo" /></a></div>
+            <div class="uk-width-medium-1-2"><a href="images/DiceyCraftLogoH.png"><img src="images/DiceyCraftLogoH.png" alt="logo" /></a></div>
           </div>
           <hr>
           <h2 id="awards">Awards &amp; Recognition</h2>
