--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
           <ul class="uk-nav uk-nav-side">
             <li><a href="#factsheet">Factsheet</a></li>
             <li><a href="#description">Description</a></li>
-            <li><a href="#history">History</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#trailers">Videos</a></li>
-            <li><a href="#images">Images</a></li>
+            <li><a href="#history">Press Releases</a></li>
             <li><a href="#logo">Logo &amp; Icon</a></li>
             <li><a href="#awards">Awards &amp; Recognition</a></li>
             <li><a href="#quotes">Selected Articles</a></li>
             <li><a href="#links">Additional Links</a></li>
-            <li><a href="#credits">Team</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
