--- a/steam201711/index.html
+++ b/steam201711/index.html
@@ -64,6 +64,7 @@
                 本作品は「影の魔女シャッテ」と「使い魔ランタ」を操作して影鬼と戦うステージ踏破型3D影踏みアクションゲームです。 誰もが一度は夢見た影を使ったアクションの全て詰め込んだ独特なゲームシステムは必見です。影を縫い止めて動きを止たり、影の中を移動したり、果ては影に潜り込んで敵を操ったり、他にも多彩なアクションを駆使してステージを攻略していきます。ステージごとに用意されている影を使った独創的なギミックはユーザーに今までにない体験を提供できると確信しています。
               </p>
               <h2 id="history">History</h2>
+              <p>This product is Steam version of "Schatte ~ The Witch and the Fake Shadow ~" distributed by ComicMarket 92.Currently we are selling on DLSite.com, MelonbooksDL, Melonbooks, Toranoana etc.</p>
               <p>本作品は コミックマーケット92 で頒布した「魔女と偽りの影」の Steam 版であり、現在は DLSite様、メロンブックスDL様でのダウンロード販売及びメロンブックス様、とらのあな様などでの委託販売をしております。</p>
               <h2 id="features">Features</h2>
               <p><strong>A simple operation "throw", "jump", "stepping" realizes a wide variety of actions!!</strong></p>
