--- a/steam201711/index.html
+++ b/steam201711/index.html
@@ -58,6 +58,13 @@
             <div class="uk-width-medium-4-6">
               <h2 id="description">Description</h2>
               <p>
+                Schatte ～The Witch and the Fake Shadow～
+              </p>
+              <p>
+                魔女と偽りの影
+              </p>
+              <h2 id="description">Description</h2>
+              <p>
                 This is a 3D "Step-on-Shadow" action game of which character you control is "Shutte, The shadow witch" and her fairy servant "Ranta".
               </p>
               <p>
