--- a/steam201711/index.html
+++ b/steam201711/index.html
@@ -56,7 +56,7 @@
               </p>
             </div>
             <div class="uk-width-medium-4-6">
-              <h2 id="description">Description</h2>
+              <h2 id="description">Product name</h2>
               <p>
                 Schatte ～The Witch and the Fake Shadow～
               </p>
