--- a/steam201711/index.html
+++ b/steam201711/index.html
@@ -65,7 +65,9 @@
               </p>
               <h2 id="description">Description</h2>
               <p>
-                This is a 3D "Step-on-Shadow" action game of which character you control is "Shutte, The shadow witch" and her fairy servant "Ranta".
+                This is a 3D "Step-on-Shadow" action game of which character you control is "Shutte, The shadow witch" and her fairy servant "Ranta". You can’t miss the unique system of this game with every action using shadows, which we all once have dreamed of.
+You will capture the stages by binding shadow to stop the motion, moving in the shadows, even controlling the enemy diving into the shadows, and by using other variety of actions.
+We believe that our original gimmicks prepared on each stage will offer you a new experience you have never known.
               </p>
               <p>
                 本作品は「影の魔女シャッテ」と「使い魔ランタ」を操作して影鬼と戦うステージ踏破型3D影踏みアクションゲームです。 誰もが一度は夢見た影を使ったアクションの全て詰め込んだ独特なゲームシステムは必見です。影を縫い止めて動きを止たり、影の中を移動したり、果ては影に潜り込んで敵を操ったり、他にも多彩なアクションを駆使してステージを攻略していきます。ステージごとに用意されている影を使った独創的なギミックはユーザーに今までにない体験を提供できると確信しています。
