--- a/steam201711/index.html
+++ b/steam201711/index.html
@@ -65,7 +65,7 @@
               </p>
               <h2 id="description">Description</h2>
               <p>
-                This is a 3D "Step-on-Shadow" action game of which character you control is "Shutte, The shadow witch" and her fairy servant "Ranta". You can’t miss the unique system of this game with every action using shadows, which we all once have dreamed of.
+                This is a 3D "Step-on-Shadow" action game of which character you control is "Schatte, The shadow witch" and her fairy servant "Lumiere". You can’t miss the unique system of this game with every action using shadows, which we all once have dreamed of.
 You will capture the stages by binding shadow to stop the motion, moving in the shadows, even controlling the enemy diving into the shadows, and by using other variety of actions.
 We believe that our original gimmicks prepared on each stage will offer you a new experience you have never known.
               </p>
