--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="uk-width-medium-4-6">
               <h2 id="description">Description</h2>
               <p>
-
+                DiceyCraft is a doujin game production circle in Japan. The work is made by one person. I am building over time the work that I think is confident and interesting.
+We are developing games for Windows, but in the future we will continue to develop with the view of Mac, PS4 and Nintendo Switch.
               </p>
               <p>
                 DiceyCraft は日本の同人ゲーム制作サークルです。完全一人制作の体制をとっており、私が自信を持って面白いと思える作品を時間をかけて作り上げています。
